; ModuleID = '/home/carl/AnghaBench/linux/drivers/xen/extr_mcelog.c_xen_mce_work_fn.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/xen/extr_mcelog.c_xen_mce_work_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@mcelog_lock = common dso_local global i32 0, align 4
@XEN_MC_URGENT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [89 x i8] c"Failed to handle urgent mc_info queue, continue handling nonurgent mc_info queue anyway\0A\00", align 1
@XEN_MC_NONURGENT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [42 x i8] c"Failed to handle nonurgent mc_info queue\0A\00", align 1
@xen_mce_chrdev_wait = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @xen_mce_work_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_mce_work_fn(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca i32, align 4
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %4 = call i32 @mutex_lock(i32* @mcelog_lock)
  %5 = load i32, i32* @XEN_MC_URGENT, align 4
  %6 = call i32 @mc_queue_handle(i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 @pr_err(i8* getelementptr inbounds ([89 x i8], [89 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i32, i32* @XEN_MC_NONURGENT, align 4
  %13 = call i32 @mc_queue_handle(i32 %12)
  store i32 %13, i32* %3, align 4
  %14 = load i32, i32* %3, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %11
  %17 = call i32 @pr_err(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.1, i64 0, i64 0))
  br label %18

18:                                               ; preds = %16, %11
  %19 = call i32 @wake_up_interruptible(i32* @xen_mce_chrdev_wait)
  %20 = call i32 @mutex_unlock(i32* @mcelog_lock)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @mc_queue_handle(i32) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @wake_up_interruptible(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
